# tfl-collab

./: Cargo.toml  Makefile  README.md
.github/workflows/: ci.yml
src/: ast.rs  automata.rs  convertor.rs  formalism.rs  main.rs  ndfa.rs  parser.rs
src/fuzz/: mod.rs  regex_generator.rs  runner.rs  str_generator.rs
src/ndfa/: ast.rs  ffl.rs
