[package]
name = "tfl-lab2"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.10.0"
fancy-regex = "0.11.0"
log = "0.4.20"
rand = "0.8.5"
regex = "1.10.0"
ndarray = "0.15.6"
clap = { version = "4.4.6", features = ["derive"] }
